Fixed some menu spacing issues

--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -55,6 +55,7 @@ header.top {
     margin: 1.5rem 0 1.5rem 0;
     text-align: center;
     height: 3.5rem;
+    z-index:5;
     h1 {
         display:inline-block;
         margin:0.5rem;
@@ -62,12 +63,14 @@ header.top {
     .login.button {
         position:absolute;
         right:0;
+        margin-right:1rem;
     }
     .user-menu-button {
         position: absolute;
         top:0;
         right: 0;
         padding-bottom:7rem;
+        padding-right:1rem;
         img {
             border-radius: 50%;
             width: 2rem;
@@ -89,6 +92,7 @@ header.top {
             margin-right:8px;
         }
         .dropdown {
+            background-color:#fff;
             display:none;
             position:absolute;
             top:3rem;
